[project]
name = "rpi5-dht11-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adafruit-blinka>=8.58.1",
    "adafruit-circuitpython-dht>=4.0.8",
    "mcp>=1.9.3",
    "rpi-lgpio>=0.6",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
